# ecommerce_backend

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yaml
migrations/: 20260327224935_create_users_table.sql  20260409011946_create_products_table.sql  20260422092505_alt_users_table_role.sql  20260430193105_audit_logs_table.sql
src/: main.rs
src/errors/: middleware_error.rs  mod.rs  product_error.rs  user_error.rs
src/handlers/: auth_handler.rs  mod.rs  product_handler.rs
src/middleware/: admin.rs  auth.rs
src/models/: auth.rs  config.rs  database_config.rs  error.rs  mod.rs  product.rs  user.rs
src/repositories/: mod.rs  product_repo.rs  user_repo.rs
src/services/: mod.rs  product_service.rs  user_service.rs
