[package]
name = "ecommerce_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs", "use_pem"] }
tokio =  { version = "1.50.0", features = ["macros", "rt-multi-thread", "rt"] }
rustls = "0.23.36"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid"]}
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.8", features = ["cors"] }
bcrypt = "0.19.0"
