[package]
name = "ecommerce_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs", "use_pem"] }
tokio =  { version = "1.50.0", features = ["macros", "rt-multi-thread", "rt"] }
rustls = "0.23.36"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"]}
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.22.0", features = ["v7", "serde"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
bcrypt = "0.19.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
chrono = { version = "0.4.44", features = ["serde"] }
email_address = "0.2.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
tower = "0.5.3"
